--- a/htmlTemplate/emailOtp.html
+++ b/htmlTemplate/emailOtp.html
@@ -18,7 +18,7 @@
           <p style="font-size:0.9em;">Regards,<br />debay</p>
           <hr style="border:none;border-top:1px solid #eee" />
           <div style="float:right;padding:8px 0;color:#aaa;font-size:0.8em;line-height:1;font-weight:300">
-            <p>debay Inc</p>
+            <p>The Debay Inc</p>
             <!-- <p>1600 Amphitheatre Parkway</p>
             <p>California</p> -->
           </div>
