--- a/htmlTemplate/emailOtp.html
+++ b/htmlTemplate/emailOtp.html
@@ -13,7 +13,7 @@
             <a href="" style="font-size:1.4em;color: #00466a;text-decoration:none;font-weight:600">debay</a>
           </div>
           <p style="font-size:1.1em">Hi, {{customerName}}</p>
-          <p>Thank you for choosing debay. Use the following OTP to complete your verification. OTP is valid for 15 minutes</p>
+          <p>Thank you for choosing debay. Use the following OTP to complete your verification. OTP is valid for {{otpValidTime}}</p>
           <h2 style="background: #00466a;margin: 0 auto;width: max-content;padding: 0 10px;color: #fff;border-radius: 4px;">{{otp}}</h2>
           <p style="font-size:0.9em;">Regards,<br />debay</p>
           <hr style="border:none;border-top:1px solid #eee" />
